--- a/tidy.css
+++ b/tidy.css
@@ -142,10 +142,33 @@ main .button:hover {
   background-position: 0 0;
 }
 main .content {
-  background-color: rgb(249, 247, 242);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   padding: 1rem;
+  background-color: rgb(249, 247, 242);
 }
 main .content .page-subheading {
+  display: none;
+}
+main .content .dropdown-cont {
+  margin: 1rem;
+  text-align: center;
+  width: 100vw;
+}
+main .content .dropdown-cont .dropdown-icon {
+  cursor: pointer;
+}
+main .content .dropdown-cont .dropdown-list {
+  display: none;
+  list-style: none;
+}
+main .content .dropdown-cont #dropdown-check:checked ~ .dropdown-list {
+  display: block;
+}
+main .content .dropdown-cont #dropdown-check {
   display: none;
 }
 main .content figure {
@@ -179,7 +202,8 @@ main .content .container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: space-evenly;
+  width: 100%;
 }
 main .content .card {
   display: flex;
@@ -302,12 +326,10 @@ footer #footer-text {
   body main .content .card {
     justify-content: center;
   }
-  body main .content .container {
-    justify-content: space-evenly;
+  body main .content .modular {
+    min-width: 20rem;
     width: 100%;
-  }
-  body main .content img {
-    max-width: 500px;
+    margin: 1rem;
   }
   body main .content #about-img {
     max-width: 500px;
@@ -392,6 +414,9 @@ footer #footer-text {
   }
   body #main-container main .content .article {
     max-width: 60rem;
+  }
+  body #main-container main .content .modular {
+    width: 40%;
   }
 }
 
