--- a/tidy.scss
+++ b/tidy.scss
@@ -124,7 +124,7 @@ body {
       transform: translateX(-50vw);
       transition: 0.5s;
       &:hover {
-        box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669); 
+        box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
       }
       li {
         padding-left: 2rem;
@@ -172,10 +172,38 @@ main {
     }
   }
   .content {
-    background-color: $white;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
+    background-color: $white;
     .page-subheading {
       display: none;
+    }
+    .dropdown-cont {
+      margin: 1rem;
+      // position: fixed;
+      // top: 10rem;
+      // left: 2rem;
+      // display: flex;
+      // justify-content: center;
+      text-align: center;
+      width: 100vw; // prevents wrap
+      .dropdown-icon {
+        cursor: pointer;
+      }
+      .dropdown-list {
+        display: none;
+        list-style: none;
+      }
+      #dropdown-check:checked ~ .dropdown-list {
+        display: block;
+      }
+      #dropdown-check {
+        display: none;
+      }
     }
     figure {
       margin: 1rem 0;
@@ -208,7 +236,8 @@ main {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-      align-items: center;
+      align-items: space-evenly; //
+      width: 100%;
     }
     .card {
       display: flex;
@@ -222,7 +251,7 @@ main {
       transition: 0.2s;
       &:hover {
         transform: scale(1.01);
-        box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669); 
+        box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
       }
       h2 {
         text-align: center;
@@ -341,20 +370,10 @@ footer {
         .card {
           justify-content: center;
         }
-        // .modular {
-        //   min-height: 5rem;
-        //   height: min-content;
-        //   // width: 40%;
-        //   // width: 100%;
-        //   // max-width: 40vw; //
-        //   margin: 1rem; //
-        // }
-        .container {
-          justify-content: space-evenly;
-          width: 100%;
-        }
-        img {
-          max-width: 500px;
+        .modular {
+          min-width: 20rem; //
+          width: 100%; //
+          margin: 1rem; //
         }
         #about-img {
           max-width: 500px;
@@ -447,6 +466,9 @@ footer {
           }
           .article {
             max-width: 60rem;
+          }
+          .modular {
+            width: 40%; //
           }
         }
       }
