fixed resume .doc width

--- a/tidy.css
+++ b/tidy.css
@@ -283,6 +283,9 @@ main .content .blog-time {
 main .content iframe {
   min-height: 50vh;
 }
+main .content .doc {
+  width: 100%;
+}
 main .logo {
   width: 50px;
   border-radius: 0%;
@@ -333,9 +336,6 @@ footer #footer-text {
   }
   body main .content #about-img {
     max-width: 500px;
-  }
-  body main .content .doc {
-    width: 100%;
   }
 }
 @media only screen and (min-width: 992px) {
