--- a/tidy.scss
+++ b/tidy.scss
@@ -323,6 +323,9 @@ main {
       min-height: 50vh;
       // display: none;    //// TURN ON FOR MOBILE/DESKTOP
     }
+    .doc {
+      width: 100%;
+    }
   }
   .logo {
     width: 50px;
@@ -378,9 +381,9 @@ footer {
         #about-img {
           max-width: 500px;
         }
-        .doc {
-          width: 100%;
-        }
+        // .doc {
+        //   width: 80%;
+        // }
       }
     }
   }
