--- a/tidy.scss
+++ b/tidy.scss
@@ -92,7 +92,7 @@ body {
     #nav-check {
       display: none;
     }
-    #nav-check:checked ~ #nav-list {
+    #nav-check:checked ~ nav {
       transform: translateX(0vw);
     }
     #nav-check:checked ~ main {
@@ -106,12 +106,12 @@ body {
       z-index: 999;
       color: $brown;
     }
-    #nav-list {
+    nav {
       z-index: 9;
       position: fixed;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       margin-top: 6rem;
       left: -2rem;
@@ -126,11 +126,18 @@ body {
       &:hover {
         box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
       }
-      li {
-        padding-left: 2rem;
-        text-align: center;
-        font-family: $karla;
-        font-size: 1.5rem;
+      #nav-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        list-style: none;
+        li {
+          padding-left: 2rem;
+          text-align: center;
+          font-family: $karla;
+          font-size: 1.5rem;
+        }
       }
     }
   }
@@ -450,12 +457,12 @@ footer {
           transform: translateX(5.5rem);
         }
       }
-      #nav-list {
+      nav {
         margin-top: 8rem;
         width: 25vw;
         transform: translateX(-25vw);
       }
-      #nav-check:checked ~ #nav-list {
+      #nav-check:checked ~ nav {
         transform: translateX(0vw);
       }
       #nav-check:checked ~ main {
