--- a/tidy.scss
+++ b/tidy.scss
@@ -83,64 +83,116 @@ body {
       }
     }
   }
-  #main-container {
-    width: 100vw;
-    height: 4rem;
-    #desk-nav-icon {
-      display: none;
+  #desk-nav-icon {
+    display: none;
+  }
+  #nav-check {
+    display: none;
+  }
+  #nav-check:checked ~ nav {
+    transform: translateX(0vw);
+  }
+  #nav-check:checked ~ main {
+    transform: translateX(50vw);
+  }
+  #mob-nav-icon {
+    z-index: 999;
+    position: fixed;
+    padding: 1rem;
+    padding-left: 5vw; //
+    font-size: 2rem;
+    color: $brown;
+  }
+  nav {
+    z-index: 9;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6rem;
+    left: -2rem;
+    width: 50vw;
+    height: 75vh;
+    padding: 5rem;
+    background-color: $white;
+    @include box-shadow();
+    @include card-border();
+    transform: translateX(-50vw);
+    transition: 0.5s;
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
     }
-    #nav-check {
-      display: none;
-    }
-    #nav-check:checked ~ nav {
-      transform: translateX(0vw);
-    }
-    #nav-check:checked ~ main {
-      transform: translateX(50vw);
-    }
-    #mob-nav-icon {
-      position: fixed;
-      padding: 1rem;
-      padding-left: 5vw; //
-      font-size: 2rem;
-      z-index: 999;
-      color: $brown;
-    }
-    nav {
-      z-index: 9;
-      position: fixed;
+    #nav-list {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin-top: 6rem;
-      left: -2rem;
-      width: 50vw;
-      height: 75vh;
-      padding: 5rem;
-      background-color: $white;
-      @include box-shadow();
-      @include card-border();
-      transform: translateX(-50vw);
-      transition: 0.5s;
-      &:hover {
-        box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
-      }
-      #nav-list {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-        list-style: none;
-        li {
-          padding-left: 2rem;
-          text-align: center;
-          font-family: $karla;
-          font-size: 1.5rem;
-        }
+      justify-content: space-between;
+      height: 100%;
+      list-style: none;
+      li {
+        padding-left: 2rem;
+        text-align: center;
+        font-family: $karla;
+        font-size: 1.5rem;
       }
     }
   }
+  // #main-container {
+  //   // #desk-nav-icon {
+  //   //   display: none;
+  //   // }
+  //   // #nav-check {
+  //   //   display: none;
+  //   // }
+  //   // #nav-check:checked ~ nav {
+  //   //   transform: translateX(0vw);
+  //   // }
+  //   // #nav-check:checked ~ main {
+  //   //   transform: translateX(50vw);
+  //   // }
+  //   // #mob-nav-icon {
+  //   //   position: fixed;
+  //   //   padding: 1rem;
+  //   //   padding-left: 5vw; //
+  //   //   font-size: 2rem;
+  //   //   z-index: 999;
+  //   //   color: $brown;
+  //   // }
+  //   // nav {
+  //   //   z-index: 9;
+  //   //   position: fixed;
+  //   //   display: flex;
+  //   //   flex-direction: column;
+  //   //   justify-content: center;
+  //   //   align-items: center;
+  //   //   margin-top: 6rem;
+  //   //   left: -2rem;
+  //   //   width: 50vw;
+  //   //   height: 75vh;
+  //   //   padding: 5rem;
+  //   //   background-color: $white;
+  //   //   @include box-shadow();
+  //   //   @include card-border();
+  //   //   transform: translateX(-50vw);
+  //   //   transition: 0.5s;
+  //   //   &:hover {
+  //   //     box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
+  //   //   }
+  //   //   #nav-list {
+  //   //     display: flex;
+  //   //     flex-direction: column;
+  //   //     justify-content: space-between;
+  //   //     height: 100%;
+  //   //     list-style: none;
+  //   //     li {
+  //   //       padding-left: 2rem;
+  //   //       text-align: center;
+  //   //       font-family: $karla;
+  //   //       font-size: 1.5rem;
+  //   //     }
+  //   //   }
+  //   // }
+  // }
   p {
     color: $black;
   }
@@ -235,6 +287,9 @@ main {
       }
     }
     .modular {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       min-height: 5rem;
       height: min-content;
       margin: 1rem; //
@@ -244,7 +299,11 @@ main {
       flex-direction: row;
       justify-content: space-evenly;
       align-items: space-evenly; //
+      // flex-wrap: wrap;
       width: 100%;
+      * {
+        // align-self: center;
+      }
     }
     .card {
       display: flex;
@@ -364,11 +423,14 @@ footer {
 @media only screen and (min-width: 600px) {
   body {
     font-size: 1rem;
-    #main-container {
-      #mob-nav-icon {
-        padding-left: 3vw;
-      }
+    #mob-nav-icon {
+      padding-left: 3vw;
     }
+    // #main-container {
+    //   #mob-nav-icon {
+    //     padding-left: 3vw;
+    //   }
+    // }
     main {
       .content {
         display: flex;
@@ -385,6 +447,9 @@ footer {
           width: 100%; //
           margin: 1rem; //
         }
+        .container {
+          // flex-wrap: nowrap;
+        }
         #about-img {
           max-width: 500px;
         }
@@ -399,89 +464,166 @@ footer {
 //DESKTOP//
 @media only screen and (min-width: 992px) {
   body {
+    position: relative;
+    // top: 0;
+    // height: 7rem;
     header {
       position: relative;
-      height: 7rem;
+      height: 6rem;
       box-shadow: none;
       #header-cont {
-        transform: scale(2);
+        transform: scale(1.5);
         padding-right: 5rem;
       }
     }
-    #main-container {
+    #nav-button {
       position: absolute;
       top: 0;
-      height: 7rem;
-      #nav-button {
-        position: relative;
-        text-align: center;
-        line-height: 300%;
-        #mob-nav-icon {
-          display: none;
-        }
-        #desk-nav-icon {
-          z-index: 999;
-          display: inline-block;
-          position: fixed;
-          padding: 1rem;
+      text-align: center;
+      line-height: 300%;
+      #mob-nav-icon {
+        display: none;
+      }
+      #desk-nav-icon {
+        z-index: 999;
+        display: inline-block;
+        position: fixed;
+        padding: 1rem;
+        font-size: 2rem;
+        color: $brown;
+        transition: 1s;
+        #menu-text {
+          font-family: $karla;
           font-size: 2rem;
-          color: $brown;
-          transition: 1s;
-          #menu-text {
-            font-family: $karla;
-            font-size: 2rem;
-            transition: 0.2s;
-            &::selection {
-              background-color: transparent;
-            }
+          transition: 0.2s;
+          &::selection {
+            background-color: transparent;
           }
-          #arrows {
-            position: absolute;
+        }
+        #arrows {
+          position: absolute;
+          display: block;
+          left: -2rem;
+          transition: 0.2s;
+          .arrow {
             display: block;
-            left: -2rem;
-            transition: 0.2s;
-            .arrow {
-              display: block;
-              font-size: 1.5rem;
-              -webkit-text-stroke: 2px $white;
-              // margin: -1px;
-              transform: scale(1.8, 1);
-            }
+            font-size: 1.5rem;
+            -webkit-text-stroke: 2px $white;
+            // margin: -1px;
+            transform: scale(1.8, 1);
           }
         }
-        #menu-text:hover {
-          cursor: pointer;
-          transform: translateX(0.5rem);
+      }
+      #menu-text:hover {
+        cursor: pointer;
+        transform: translateX(0.5rem);
+      }
+      #menu-text:hover ~ #arrows {
+        transform: translateX(5.5rem);
+      }
+    }
+    nav {
+      // margin-top: 8rem;
+      top: 2rem;
+      width: 25vw;
+      height: 60vh;
+      margin-bottom: 10rem;
+      transform: translateX(-25vw);
+    }
+    #nav-check:checked ~ nav {
+      transform: translateX(0vw);
+    }
+    #nav-check:checked ~ main {
+      transform: translateX(25vw);
+    }
+    main {
+      // top: 7rem;
+      padding-left: 5rem;
+      .content {
+        .card {
         }
-        #menu-text:hover ~ #arrows {
-          transform: translateX(5.5rem);
+        .article {
+          max-width: 60rem;
         }
-      }
-      nav {
-        margin-top: 8rem;
-        width: 25vw;
-        transform: translateX(-25vw);
-      }
-      #nav-check:checked ~ nav {
-        transform: translateX(0vw);
-      }
-      #nav-check:checked ~ main {
-        transform: translateX(25vw);
-      }
-      main {
-        top: 7rem;
-        padding-left: 5rem;
-        .content {
-          .card {
-          }
-          .article {
-            max-width: 60rem;
-          }
-          .modular {
-            width: 40%; //
-          }
+        .modular {
+          width: 40%; //
         }
       }
     }
+    // #main-container {
+    //   position: absolute;
+    //   top: 0;
+    //   height: 7rem;
+    //   #nav-button {
+    //     position: relative;
+    //     text-align: center;
+    //     line-height: 300%;
+    //     #mob-nav-icon {
+    //       display: none;
+    //     }
+    //     #desk-nav-icon {
+    //       z-index: 999;
+    //       display: inline-block;
+    //       position: fixed;
+    //       padding: 1rem;
+    //       font-size: 2rem;
+    //       color: $brown;
+    //       transition: 1s;
+    //       #menu-text {
+    //         font-family: $karla;
+    //         font-size: 2rem;
+    //         transition: 0.2s;
+    //         &::selection {
+    //           background-color: transparent;
+    //         }
+    //       }
+    //       #arrows {
+    //         position: absolute;
+    //         display: block;
+    //         left: -2rem;
+    //         transition: 0.2s;
+    //         .arrow {
+    //           display: block;
+    //           font-size: 1.5rem;
+    //           -webkit-text-stroke: 2px $white;
+    //           // margin: -1px;
+    //           transform: scale(1.8, 1);
+    //         }
+    //       }
+    //     }
+    //     #menu-text:hover {
+    //       cursor: pointer;
+    //       transform: translateX(0.5rem);
+    //     }
+    //     #menu-text:hover ~ #arrows {
+    //       transform: translateX(5.5rem);
+    //     }
+    //   }
+    //   nav {
+    //     margin-top: 8rem;
+    //     width: 25vw;
+    //     transform: translateX(-25vw);
+    //   }
+    //   #nav-check:checked ~ nav {
+    //     transform: translateX(0vw);
+    //   }
+    //   #nav-check:checked ~ main {
+    //     transform: translateX(25vw);
+    //   }
+    //   main {
+    //     top: 7rem;
+    //     padding-left: 5rem;
+    //     .content {
+    //       .card {
+    //       }
+    //       .article {
+    //         max-width: 60rem;
+    //       }
+    //       .modular {
+    //         width: 40%; //
+    //       }
+    //     }
+    //   }
+    // }
   }
 }
