--- a/tidy.css
+++ b/tidy.css
@@ -153,7 +153,7 @@ main .content {
   padding: 1rem;
   background-color: rgb(249, 247, 242);
 }
-main .content .page-subheading {
+main .content #page-sub {
   display: none;
 }
 main .content .dropdown-cont {
@@ -342,6 +342,16 @@ footer #footer-text {
   }
   body main .content #about-img {
     max-width: 500px;
+  }
+  body main .content #page-sub {
+    z-index: 999;
+    display: block;
+    position: absolute;
+    top: 2rem;
+    right: 0;
+    overflow: hidden;
+    writing-mode: vertical-lr;
+    color: rgb(35, 0, 139);
   }
 }
 @media only screen and (min-width: 992px) {
