ALL HTML + CSS VALIDATED - now to remove redundant or commented code

--- a/tidy.scss
+++ b/tidy.scss
@@ -298,7 +298,7 @@ main {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-      align-items: space-evenly; //
+      // align-items: space-evenly; //
       // flex-wrap: wrap;
       width: 100%;
       // * {
