--- a/tidy.css
+++ b/tidy.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  min-height: 100vh;
+  height: 100vh;
   overflow-x: hidden;
 }
 
@@ -119,7 +119,6 @@ main {
   background-color: rgb(249, 247, 242);
   position: relative;
   top: 4rem;
-  min-height: 100vh;
   min-width: 100vw;
   padding: 0 0 5rem 0;
   font-family: "Karla", sans-serif;
@@ -347,9 +346,10 @@ footer #footer-text {
     display: block;
     position: absolute;
     top: 2rem;
-    right: 0;
+    right: 1rem;
     overflow: hidden;
-    writing-mode: vertical-lr;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
     color: rgb(35, 0, 139);
   }
 }
