--- a/tidy.css
+++ b/tidy.css
@@ -84,8 +84,9 @@ body nav {
   left: -2rem;
   width: 50vw;
   height: 75vh;
-  padding: 5rem;
-  background-color: rgb(249, 247, 242);
+  max-height: 30rem;
+  padding: 2rem 0;
+  background-color: rgb(156, 150, 135);
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
   border-radius: 1rem 1rem 1rem 1rem;
   transform: translateX(-50vw);
@@ -105,7 +106,10 @@ body nav #nav-list li {
   padding-left: 2rem;
   text-align: center;
   font-family: "Karla", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+}
+body nav #nav-list li a {
+  color: rgb(249, 247, 242);
 }
 body p {
   color: rgb(57, 57, 57);
@@ -322,6 +326,14 @@ footer #footer-text {
   body #mob-nav-icon {
     padding-left: 3vw;
   }
+  body #nav-check:checked ~ main {
+    transform: translateX(10rem);
+  }
+  body nav {
+    width: 25vw;
+    max-width: 10rem;
+    transform: translateX(-10rem);
+  }
   body main .content {
     display: flex;
     flex-direction: row;
@@ -379,7 +391,7 @@ footer #footer-text {
     z-index: 999;
     display: inline-block;
     position: fixed;
-    padding: 1rem;
+    padding: 2rem 0 2rem 3rem;
     font-size: 2rem;
     color: rgb(83, 75, 58);
     transition: 1s;
@@ -400,7 +412,7 @@ footer #footer-text {
   }
   body #nav-button #desk-nav-icon #arrows .arrow {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     -webkit-text-stroke: 2px rgb(249, 247, 242);
     transform: scale(1.8, 1);
   }
@@ -413,16 +425,35 @@ footer #footer-text {
   }
   body nav {
     top: 2rem;
-    width: 25vw;
+    max-width: 13rem;
     height: 60vh;
     margin-bottom: 10rem;
-    transform: translateX(-25vw);
+    transform: translateX(-13rem);
+    align-items: flex-start;
+  }
+  body nav li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    margin-left: 1rem;
+  }
+  body nav li a::before {
+    content: "cd ./";
+    color: rgb(76, 0, 255);
+    font-family: "Monaco", monospace;
+    font-size: 1rem;
+    opacity: 0;
+    transition: 0.1s;
+  }
+  body nav li a:hover::before {
+    opacity: 1;
   }
   body #nav-check:checked ~ nav {
-    transform: translateX(0vw);
+    transform: translateX(0);
   }
   body #nav-check:checked ~ main {
-    transform: translateX(25vw);
+    transform: translateX(13rem);
   }
   body main {
     top: 0;
