--- a/tidy.scss
+++ b/tidy.scss
@@ -1,6 +1,7 @@
 //COLOURS
 $white: rgb(249, 247, 242);
 $mint: rgb(217, 235, 201);
+$light-brown: rgb(156, 150, 135);
 $brown: rgb(83, 75, 58);
 $dark-brown: rgb(69, 62, 47);
 $pine: rgb(67, 96, 64);
@@ -114,8 +115,9 @@ body {
     left: -2rem;
     width: 50vw;
     height: 75vh;
-    padding: 5rem;
-    background-color: $white;
+    max-height: 30rem;
+    padding: 2rem 0;
+    background-color: $light-brown;
     @include box-shadow();
     @include card-border();
     transform: translateX(-50vw);
@@ -133,7 +135,10 @@ body {
         padding-left: 2rem;
         text-align: center;
         font-family: $karla;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        a {
+          color: $white;
+        }
       }
     }
   }
@@ -245,7 +250,7 @@ main {
       padding: 1rem;
       background-color: white; //
       @include card-border();
-      @include box-shadow(); ////// TURN ON FOR DESK
+      @include box-shadow();
       transition: 0.2s;
       &:hover {
         transform: scale(1.01);
@@ -355,6 +360,14 @@ footer {
     #mob-nav-icon {
       padding-left: 3vw;
     }
+    #nav-check:checked ~ main {
+      transform: translateX(10rem);
+    }
+    nav {
+      width: 25vw;
+      max-width: 10rem;
+      transform: translateX(-10rem);
+    }
     main {
       .content {
         display: flex;
@@ -415,7 +428,7 @@ footer {
         z-index: 999;
         display: inline-block;
         position: fixed;
-        padding: 1rem;
+        padding: 2rem 0 2rem 3rem;
         font-size: 2rem;
         color: $brown;
         transition: 1s;
@@ -434,7 +447,7 @@ footer {
           transition: 0.2s;
           .arrow {
             display: block;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             -webkit-text-stroke: 2px $white;
             transform: scale(1.8, 1);
           }
@@ -450,16 +463,35 @@ footer {
     }
     nav {
       top: 2rem;
-      width: 25vw;
+      max-width: 13rem;
       height: 60vh;
       margin-bottom: 10rem;
-      transform: translateX(-25vw);
+      transform: translateX(-13rem); //
+      align-items: flex-start;
+      li {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: nowrap;
+        margin-left: 1rem;
+        a::before {
+          content: "cd ./";
+          color: $purple;
+          font-family: $monaco;
+          font-size: 1rem;
+          opacity: 0;
+          transition: 0.1s;
+        }
+        a:hover::before {
+          opacity: 1;
+        }
+      }
     }
     #nav-check:checked ~ nav {
-      transform: translateX(0vw);
+      transform: translateX(0);
     }
     #nav-check:checked ~ main {
-      transform: translateX(25vw);
+      transform: translateX(13rem);
     }
     main {
       top: 0;
