Added about info with lists - validated

--- a/tidy.css
+++ b/tidy.css
@@ -205,7 +205,6 @@ main .content .modular {
   align-items: center;
   min-height: 5rem;
   height: min-content;
-  margin: 1rem;
 }
 main .content .container {
   display: flex;
@@ -228,10 +227,35 @@ main .content .card:hover {
   transform: scale(1.01);
   box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
 }
-main .content .card h2 {
+main .content .card h2,
+main .content .card h3 {
   text-align: center;
-  font-family: "Karla", sans-serif;
+  font-family: "Monaco", monospace;
   color: rgb(69, 62, 47);
+}
+main .content .card h2 {
+  font-size: 1.3rem;
+}
+main .content .card h3 {
+  font-size: 1rem;
+}
+main .content .card .card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: center;
+}
+main .content .card .card-list div {
+  margin: 0.5rem;
+}
+main .content .card .card-list div ul {
+  list-style: none;
+}
+main .content .card .card-list div ul li {
+  font-family: "Monaco", monospace;
+  color: rgb(35, 0, 139);
+  font-size: 0.9rem;
 }
 main .content .card label {
   position: relative;
@@ -297,9 +321,10 @@ main .content .doc {
 main .logo {
   width: 50px;
   border-radius: 0%;
+  transition: 0.2s;
 }
 main .logo:hover {
-  transform: scale(1.01);
+  transform: scale(1.05);
 }
 
 footer {
